further Boy Scout rule activity in ReadThreadingAssembler